tests/semantic/invalid/condition_not_bool.src
fn main() -> void {
    if (42) {
        return;
    }
}