tests/semantic/invalid/condition_not_bool.expected
semantic error at condition_not_bool.src:2:9: condition in 'if' must be bool, got int